--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,15 +1,16 @@
 header {
-  font-family: verdana;
-  font-size: 14px;
-  font-weight: bold;
   display: flex;
   align-items: center;
+  position: fixed;
+  z-index: 1;
   width: 100%;
   height: 80px;
   border-bottom: 1px solid black;
-  z-index: 1;
-  position: fixed;
-
+  background-color: white;
+  font-family: Verdana;
+  font-size: 14px;
+  font-weight: bold;
+  padding-top: 0;
 }
 .logo {
   display: flex;
@@ -18,7 +19,9 @@ header {
   flex-grow: 1;
   margin-left: 10px;
 }
-
+.text h2 {
+  height: 80px;
+}
 .logo img {
   margin-right: 12px;
 }
@@ -35,4 +38,149 @@ header nav {
 nav span {
   display: inline-block;
   padding: 20px 10px;
+}
+
+.main {
+  display: flex;
+  width: 1232px;
+  margin: 0 auto 78px auto;
+  padding-top: 116px;
+}
+.column {
+  display: flex;
+  flex-direction: column;
+  margin-right: 32px;
+}
+.column .large {
+  width: 630px;
+}
+.column .medium {
+  width: 300px;
+}
+.medium h2 {
+  margin-top: 1px;
+}
+.column .small {
+  width: 240px;
+  flex-direction: column;
+}
+.main-story span {
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 40px;
+  color: white;
+}
+.main-story {
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
+.main-story .narrative {
+  width: 625px;
+}
+.narrative {
+  margin-top: 16px;
+}
+p {
+  display: block;
+}
+.story {
+  display: flex;
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+  flex-direction: column;
+  width: 300px;
+}
+.articles .text {
+  height: 250px;
+}
+.story span {
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+}
+
+.img1 {
+  display: flex;
+  width: 630px;
+  height: 300px;
+  background-image: url("../images/img-story-main.png")
+}
+span {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+.img2 {
+  display: flex;
+  height: 300px;
+  width: 300px;
+  background-image: url("../images/img-story-2.png")
+}
+.img3 {
+  display: flex;
+  height: 300px;
+  width: 300px;
+  background-image: url("../images/img-story-3.png")
+}
+.cats {
+  display: flex;
+  height: 300px;
+  width: 300px;
+  background-image: url("../images/img-story-1.png")
+}
+.articles {
+  display: flex;
+  justify-content: space-between;
+}
+.news-bites h2 {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+div .news-bites {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+.bite {
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  border-bottom: 1px solid black;
+  padding: 10px 10px;
+}
+.news-bites h2{
+  padding-bottom: 16px;
+}
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 300px;
+  width: 100%;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+}
+footer .title {
+  display: inline-block;
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  padding-right: 25px;
+  border-right: medium solid white;
+}
+footer nav {
+  display: inline-block;
+  padding-left: 25px;
+}
+nav span {
+  display: inline-block;
 }
